...
  DeviceType get deviceType => DeviceType.meshtastic;

  @override
  String get id => _deviceId;

  @override
  String get displayName => 'Simulation Device';

  @override
  Future<int?> getMyNodeNum() async {
    return 100000001;
  }

...
